--- a/index.html
+++ b/index.html
@@ -18,44 +18,60 @@
   <header class="header">
     <!-- Навігація -->
     <div class="header__container container">
-      <nav class="nav">
-        <!-- Логотип -->
-        <a href="./index.html" lang="en" class="header__logo logo link">
-          <span class="logo--alt">Web</span>Studio
-        </a>
-        <ul class="nav__list list">
-          <li class="nav__item">
-            <a href="./index.html" class="nav__link nav__link--current link">
-              Студія</a>
-          </li>
-          <li class="nav__item">
-            <a href="./portfolio.html" class="nav__link link">
-              Портфоліо
+      <!-- Логотип -->
+      <a href="./index.html" lang="en" class="header__logo logo link">
+        <span class="logo--alt">Web</span>Studio
+      </a>
+      <div class="header__menu">
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a href="./index.html" class="nav__link nav__link--current link">
+                Студія</a>
+            </li>
+            <li class="nav__item">
+              <a href="./portfolio.html" class="nav__link link">
+                Портфоліо
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li class="header-contacts__item">
+            <a href="mailto:info@devstudio.com" class="header-contacts__link link">
+              <svg class="header-contacts__icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link link">Контакти</a>
+          <li class="header-contacts__item">
+            <a href="tel:+380961111111" class="header-contacts__link link">
+              <svg class="header-contacts__icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts__item">
-          <a href="mailto:info@devstudio.com" class="header-contacts__link link">
-            <svg class="header-contacts__icon" width="16" height="12">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="header-contacts__item">
-          <a href="tel:+380961111111" class="header-contacts__link link">
-            <svg class="header-contacts__icon" width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            +38 096 111 11 11
-          </a>
-        </li>
-      </ul>
+        <ul class="header-socials list">
+          <li class="header-socials__item"><a href="#" class="header-socials__link link">Instagram</a></li>
+          <li class="header-socials__item"><a href="#" class="header-socials__link link">Twitter</a></li>
+          <li class="header-socials__item"><a href="#" class="header-socials__link link">Facebook</a></li>
+          <li class="header-socials__item"><a href="#" class="header-socials__link link">LinkedIn</a></li>
+        </ul>
+      </div>
+      <button type="button" class="menu-button">
+        <svg>
+          <use></use>
+        </svg>
+        <svg>
+          <use></use>
+        </svg>
+      </button>
     </div>
   </header>
   <main>
