--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
 
 </head>
 
-<body>
+<body data-body>
   <header class="header">
     <!-- Навігація -->
     <div class="header__container container">
       <!-- Логотип -->
-      <a href="./index.html" lang="en" class="header__logo logo link">
-        <span class="logo--alt">Web</span>Studio
-      </a>
-      <div class="header__menu">
+      <div class="mobile-header">
+        <a href="./index.html" lang="en" class="header__logo logo link">
+          <span class="logo--alt">Web</span>Studio
+        </a>
+        <button type="button" class="menu-button" aria-expanded="true" data-menu-button>
+          <svg width="40" height="40" aria-label="Перемикач мобільного меню">
+            <use href="./images/icons.svg#icon-burger" class="menu-button__icon icon__menu"></use>
+            <use href="./images/icons.svg#icon-cross" class="menu-button__icon icon__cross"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="header__menu" data-menu>
         <nav class="nav">
           <ul class="nav__list list">
             <li class="nav__item">
@@ -41,7 +49,7 @@
         </nav>
         <ul class="header-contacts list">
           <li class="header-contacts__item">
-            <a href="mailto:info@devstudio.com" class="header-contacts__link link">
+            <a href="mailto:info@devstudio.com" class="header-contacts__link header-email link">
               <svg class="header-contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
@@ -49,7 +57,7 @@
             </a>
           </li>
           <li class="header-contacts__item">
-            <a href="tel:+380961111111" class="header-contacts__link link">
+            <a href="tel:+380961111111" class="header-contacts__link header-tel link">
               <svg class="header-contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -58,20 +66,28 @@
           </li>
         </ul>
         <ul class="header-socials list">
-          <li class="header-socials__item"><a href="#" class="header-socials__link link">Instagram</a></li>
-          <li class="header-socials__item"><a href="#" class="header-socials__link link">Twitter</a></li>
-          <li class="header-socials__item"><a href="#" class="header-socials__link link">Facebook</a></li>
-          <li class="header-socials__item"><a href="#" class="header-socials__link link">LinkedIn</a></li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Instagram
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Twitter
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Facebook
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              LinkedIn
+            </a>
+          </li>
         </ul>
       </div>
-      <button type="button" class="menu-button">
-        <svg>
-          <use></use>
-        </svg>
-        <svg>
-          <use></use>
-        </svg>
-      </button>
     </div>
   </header>
   <main>
@@ -524,6 +540,7 @@
     </div>
   </div>
   <script src="./js/modal.js"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
