--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <span class="logo--alt">Web</span>Studio
         </a>
         <button type="button" class="menu-button" aria-expanded="true" data-menu-button>
-          <svg width="40" height="40" aria-label="Перемикач мобільного меню">
-            <use href="./images/icons.svg#icon-burger" class="menu-button__icon icon__menu"></use>
-            <use href="./images/icons.svg#icon-cross" class="menu-button__icon icon__cross"></use>
+          <svg width="40" height="40" aria-label="Перемикач мобільного меню" class="menu-button__icon">
+            <use href="./images/icons.svg#icon-burger" class="icon__menu"></use>
+            <use href="./images/icons.svg#icon-cross" class="icon__cross"></use>
           </svg>
         </button>
       </div>
@@ -92,14 +92,14 @@
   </header>
   <main>
     <!-- Hero -->
-    <section class="hero section">
+    <!-- <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero__button button" data-modal-open>Замовити послугу</button>
       </div>
-    </section>
+    </section> -->
     <!-- Переваги -->
-    <section class="advantages section">
+    <!-- <section class="advantages section">
       <div class="container">
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="advantages__list list">
@@ -152,9 +152,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Чим ми займаємося -->
-    <section class="speciality section">
+    <!-- <section class="speciality section">
       <div class="container">
         <h2 class="speciality__title section__title">Чим ми займаємося</h2>
         <ul class="speciality__list list">
@@ -183,9 +183,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Команда -->
-    <section class="team section">
+    <!-- <section class="team section">
       <div class="container">
         <h2 class="team__title section__title">Наша команда</h2>
         <ul class="team__list list">
@@ -362,9 +362,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Клієнти -->
-    <section class="clients section">
+    <!-- <section class="clients section">
       <h2 class="clients__title section__title">Постійні клієнти</h2>
       <ul class="clients__list list">
         <li class="clients__item">
@@ -410,11 +410,11 @@
           </a>
         </li>
       </ul>
-    </section>
+    </section> -->
   </main>
   <!-- Підвал -->
   <footer class="footer">
-    <div class="footer__container container">
+    <!-- <div class="footer__container container">
       <div class="footer-contacts">
         <a href="./index.html" lang="en" class="footer__logo logo link">
           <span class="logo--alt">Web</span>Studio
@@ -486,10 +486,10 @@
           </button>
         </form>
       </div>
-    </div>
+    </div> -->
   </footer>
   <!-- Модальне вікно -->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button type="button" class="modal-btn" data-modal-close>
         <svg class="modal-btn__icon" width="18" height="18">
@@ -538,7 +538,7 @@
         <button type="submit" class="modal__button button">Відправити</button>
       </form>
     </div>
-  </div>
+  </div>-->
   <script src="./js/modal.js"></script>
   <script src="./js/mobile-menu.js"></script>
 </body>
