Finished Hero section

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
   </header>
   <main>
     <!-- Hero -->
-    <!-- <section class="hero section">
+    <section class="hero section">
       <div class="container">
         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero__button button" data-modal-open>Замовити послугу</button>
       </div>
-    </section> -->
+    </section>
     <!-- Переваги -->
-    <!-- <section class="advantages section">
+    <section class="advantages section">
       <div class="container">
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="advantages__list list">
@@ -152,7 +152,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- Чим ми займаємося -->
     <!-- <section class="speciality section">
       <div class="container">
