Finished Speciality section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
     </section>
     <!-- Чим ми займаємося -->
-    <!-- <section class="speciality section">
+    <section class="speciality section">
       <div class="container">
         <h2 class="speciality__title section__title">Чим ми займаємося</h2>
         <ul class="speciality__list list">
@@ -183,7 +183,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- Команда -->
     <!-- <section class="team section">
       <div class="container">
