Finished Team section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
     </section>
     <!-- Команда -->
-    <!-- <section class="team section">
+    <section class="team section">
       <div class="container">
         <h2 class="team__title section__title">Наша команда</h2>
         <ul class="team__list list">
@@ -362,7 +362,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- Клієнти -->
     <!-- <section class="clients section">
       <h2 class="clients__title section__title">Постійні клієнти</h2>
