Finished Clients section

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       </div>
     </section>
     <!-- Клієнти -->
-    <!-- <section class="clients section">
+    <section class="clients section">
       <h2 class="clients__title section__title">Постійні клієнти</h2>
       <ul class="clients__list list">
         <li class="clients__item">
@@ -410,7 +410,7 @@
           </a>
         </li>
       </ul>
-    </section> -->
+    </section>
   </main>
   <!-- Підвал -->
   <footer class="footer">
