--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   </main>
   <!-- Підвал -->
   <footer class="footer">
-    <!-- <div class="footer__container container">
+    <div class="footer__container container">
       <div class="footer-contacts">
         <a href="./index.html" lang="en" class="footer__logo logo link">
           <span class="logo--alt">Web</span>Studio
@@ -440,7 +440,7 @@
           </ul>
         </address>
       </div>
-      <div class="futer-social">
+      <div class="footer-social">
         <b class="footer-social__title">Приєднуйтесь</b>
         <ul class="footer-social__list">
           <li class="footer-social__item socials-item">
@@ -486,7 +486,7 @@
           </button>
         </form>
       </div>
-    </div> -->
+    </div>
   </footer>
   <!-- Модальне вікно -->
   <!-- <div class="backdrop is-hidden" data-modal>
