--- a/portfolio.html
+++ b/portfolio.html
@@ -13,48 +13,80 @@
   <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
-<body>
+<body data-body>
   <header class="header">
     <!-- Навігація -->
     <div class="header__container container">
-      <nav class="nav">
-        <!-- Логотип -->
+      <!-- Логотип -->
+      <div class="mobile-header">
         <a href="./index.html" lang="en" class="header__logo logo link">
           <span class="logo--alt">Web</span>Studio
         </a>
-        <ul class="nav__list list">
-          <li class="nav__item">
-            <a href="./index.html" class="nav__link link">
-              Студія</a>
-          </li>
-          <li class="nav__item">
-            <a href="./portfolio.html" class="nav__link nav__link--current link">
-              Портфоліо
+        <button type="button" class="menu-button" aria-expanded="true" data-menu-button>
+          <svg width="40" height="40" aria-label="Перемикач мобільного меню" class="menu-button__icon">
+            <use href="./images/icons.svg#icon-burger" class="icon__menu"></use>
+            <use href="./images/icons.svg#icon-cross" class="icon__cross"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="header__menu" data-menu>
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a href="./index.html" class="nav__link link">
+                Студія</a>
+            </li>
+            <li class="nav__item">
+              <a href="./portfolio.html" class="nav__link nav__link--current link">
+                Портфоліо
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li class="header-contacts__item">
+            <a href="mailto:info@devstudio.com" class="header-contacts__link header-email link">
+              <svg class="header-contacts__icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link link">Контакти</a>
+          <li class="header-contacts__item">
+            <a href="tel:+380961111111" class="header-contacts__link header-tel link">
+              <svg class="header-contacts__icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts__item">
-          <a href="mailto:info@devstudio.com" class="header-contacts__link link">
-            <svg class="header-contacts__icon" width="16" height="12">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="header-contacts__item">
-          <a href="tel:+380961111111" class="header-contacts__link link">
-            <svg class="header-contacts__icon" width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            +38 096 111 11 11
-          </a>
-        </li>
-      </ul>
+        <ul class="header-socials list">
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Instagram
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Twitter
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              Facebook
+            </a>
+          </li>
+          <li class="header-socials__item">
+            <a href="#" rel="nofollow noreferrer noopener" class="header-socials__link link">
+              LinkedIn
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
   <main>
@@ -245,7 +277,7 @@
           </ul>
         </address>
       </div>
-      <div class="futer-social">
+      <div class="footer-social">
         <b class="footer-social__title">Приєднуйтесь</b>
         <ul class="footer-social__list">
           <li class="footer-social__item socials-item">
@@ -293,6 +325,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
