--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@
     </div>
   </footer>
   <!-- Модальне вікно -->
-  <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button type="button" class="modal-btn" data-modal-close>
-        <svg class="modal-btn__icon" width="18" height="18">
+      <button type="button" class="modal-close" data-modal-close>
+        <svg class="modal-close__icon" width="18" height="18">
           <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
       </button>
@@ -532,13 +532,15 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
             </span>
-            Погоджуюся з розсилкою та приймаю <a href="#" class="policy__link"> Умови
-              договору</a></label>
+            <span class="policy__text">
+              Погоджуюся з розсилкою та приймаю <a href="#" class="policy__link"> Умови
+                договору</a>
+            </span></label>
         </div>
         <button type="submit" class="modal__button button">Відправити</button>
       </form>
     </div>
-  </div>-->
+  </div>
   <script src="./js/modal.js"></script>
   <script src="./js/mobile-menu.js"></script>
 </body>
