--- a/portfolio.html
+++ b/portfolio.html
@@ -112,8 +112,16 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/technocrjak.jpg" alt="відкритий ноутбук" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/technocrjak.jpg 1x, ./images/technocrjak-x2.jpg 2x"
+                    media="(min-width: 1200px)">
+                  <source srcset="./images/technocrjak-tab.jpg 1x, ./images/technocrjak-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/technocrjak-mob.jpg 1x, ./images/technocrjak-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/technocrjak.jpg" alt="відкритий ноутбук" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -127,8 +135,16 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/basketball.jpg" alt="двоє баскетболістів з м'ячем" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/basketball.jpg 1x, ./images/basketball-x2.jpg 2x"
+                    media="(min-width: 1200px)">
+                  <source srcset="./images/basketball-tab.jpg 1x, ./images/basketball-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/basketball-mob.jpg 1x, ./images/basketball-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/basketball.jpg" alt="двоє баскетболістів з м'ячем" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -143,8 +159,15 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/seafood.jpg" alt="напис сіфуд ресторан на фоні лосося" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/seafood.jpg 1x, ./images/seafood-x2.jpg 2x" media="(min-width: 1200px)">
+                  <source srcset="./images/seafood-tab.jpg 1x, ./images/seafood-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/seafood-mob.jpg 1x, ./images/seafood-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/seafood.jpg" alt="напис сіфуд ресторан на фоні лосося" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -158,8 +181,12 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/prime.jpg" alt="навушники" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/prime.jpg 1x, ./images/prime-x2.jpg 2x" media="(min-width: 1200px)">
+                  <source srcset="./images/prime-tab.jpg 1x, ./images/prime-tab-x2.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/prime-mob.jpg 1x, ./images/prime-mob-x2.jpg 2x" media="(max-width: 767px)">
+                  <img src="./images/prime.jpg" alt="навушники" width="450" class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -173,8 +200,12 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/boxes.jpg" alt="дві коробки" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/boxes.jpg 1x, ./images/boxes-x2.jpg 2x" media="(min-width: 1200px)">
+                  <source srcset="./images/boxes-tab.jpg 1x, ./images/boxes-tab-x2.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/boxes-mob.jpg 1x, ./images/boxes-mob-x2.jpg 2x" media="(max-width: 767px)">
+                  <img src="./images/boxes.jpg" alt="дві коробки" width="450" class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -188,8 +219,16 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/no-borders.jpg" alt="епл монітор з картою світу" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/no-borders.jpg 1x, ./images/no-borders-x2.jpg 2x"
+                    media="(min-width: 1200px)">
+                  <source srcset="./images/no-borders-tab.jpg 1x, ./images/no-borders-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/no-borders-mob.jpg 1x, ./images/no-borders-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/no-borders.jpg" alt="епл монітор з картою світу" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -203,8 +242,16 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/limited-edition.jpg" alt="розгорнутий журнал" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/limited-edition.jpg 1x, ./images/limited-edition-x2.jpg 2x"
+                    media="(min-width: 1200px)">
+                  <source srcset="./images/limited-edition-tab.jpg 1x, ./images/limited-edition-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/limited-edition-mob.jpg 1x, ./images/limited-edition-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/limited-edition.jpg" alt="розгорнутий журнал" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -218,8 +265,13 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/lab.jpg" alt="бірка з написом лейбел тег" width="370" height="294"
-                  class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/lab.jpg 1x, ./images/lab-x2.jpg 2x" media="(min-width: 1200px)">
+                  <source srcset="./images/lab-tab.jpg 1x, ./images/lab-tab-x2.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/lab-mob.jpg 1x, ./images/lab-mob-x2.jpg 2x" media="(max-width: 767px)">
+                  <img src="./images/lab.jpg" alt="бірка з написом лейбел тег" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -233,8 +285,15 @@
           <li class="portfolio-card">
             <a href="#" class="portfolio__card-link link">
               <div class="portfolio__card-thumb">
-                <img src="./images/business.jpg" alt="чоловічі руки друкують за відкритим ноутбуком" width="370"
-                  height="294" class="portfolio__card-img img" />
+                <picture>
+                  <source srcset="./images/business.jpg 1x, ./images/business-x2.jpg 2x" media="(min-width: 1200px)">
+                  <source srcset="./images/business-tab.jpg 1x, ./images/business-tab-x2.jpg 2x"
+                    media="(min-width: 768px)">
+                  <source srcset="./images/business-mob.jpg 1x, ./images/business-mob-x2.jpg 2x"
+                    media="(max-width: 767px)">
+                  <img src="./images/business.jpg" alt="чоловічі руки друкують за відкритим ноутбуком" width="450"
+                    class="portfolio__card-img img" />
+                </picture>
                 <p class="portfolio__card-thumb-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем
                   функціоналу та
                   сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
